--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - run:
           name: Assemble release build
           command: |
+            pwd
             ./gradlew build
       
     
